--- a/views/about/about_guest.hbs
+++ b/views/about/about_guest.hbs
@@ -7,7 +7,7 @@
     {{/content}}
 
     {{#content "critical-styles" mode="append"}}
-        {{{inline "/styles/authentication/home.critical.css"}}}
+        {{{inlineStyle "/styles/authentication/home.critical.css"}}}
         header a[href='/about']{
             background-color: #f8a41b;
         }
