--- a/views/administration/school.hbs
+++ b/views/administration/school.hbs
@@ -3,7 +3,7 @@
         <link rel="stylesheet" href="/styles/administration/school.css"/>
     {{/content}}
     {{#content "critical-styles" mode="append"}}
-        {{{inline "/styles/administration/school.critical.css"}}}
+        {{{inlineStyle "/styles/administration/school.critical.css"}}}
     {{/content}}
 
     {{#content "page"}}
