--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="/vendor/introjs/introjs.min.css" /> 
     {{/content}}
     {{#content "critical-styles" mode="append"}}
-        {{{inline "/styles/authentication/home.critical.css"}}}
+        {{{inlineStyle "/styles/authentication/home.critical.css"}}}
     {{/content}}
 
     {{#content "scripts" mode="append"}}
