--- a/views/calendar/calendar.hbs
+++ b/views/calendar/calendar.hbs
@@ -7,7 +7,7 @@
     {{/content}}
 
     {{#content "critical-styles" mode="append"}}
-        {{{inline "/styles/calendar/calendar.critical.css"}}}
+        {{{inlineStyle "/styles/calendar/calendar.critical.css"}}}
     {{/content}}
 
     {{#content "scripts" mode="append"}}
