--- a/views/community/community_guest.hbs
+++ b/views/community/community_guest.hbs
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="/styles/authentication/home.css"/>
     {{/content}}
     {{#content "critical-styles" mode="append"}}
-        {{{inline "/styles/authentication/home.critical.css"}}}
+        {{{inlineStyle "/styles/authentication/home.critical.css"}}}
         header a[href='/community']{
             background-color: #f8a41b;
         }
