--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="/vendor/jquery/jquery-ui.css"/>
     {{/content}}
     {{#content "critical-styles" mode="append"}}
-        {{{inline "/styles/courses/course-detail.critical.css"}}}
+        {{{inlineStyle "/styles/courses/course-detail.critical.css"}}}
     {{/content}}
 
     {{#content "scripts" mode="append"}}
