--- a/views/courses/edit-course.hbs
+++ b/views/courses/edit-course.hbs
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="/styles/lib/datetimepicker/jquery.datetimepicker.min.css"/>
     {{/content}}
     {{#content "critical-styles" mode="append"}}
-        {{{inline "/styles/lib/chosen/bootstrap-chosen.css"}}}
+        {{{inlineStyle "/styles/lib/chosen/bootstrap-chosen.css"}}}
     {{/content}}
 
     {{#content "scripts" mode="append"}}
