--- a/views/dashboard/dashboard.hbs
+++ b/views/dashboard/dashboard.hbs
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="/styles/dashboard/dashboard.css"/>
     {{/content}}
     {{#content "critical-styles" mode="append"}}
-        {{{inline "/styles/dashboard/dashboard.critical.css"}}}
+        {{{inlineStyle "/styles/dashboard/dashboard.critical.css"}}}
     {{/content}}
 
     {{#content "scripts" mode="append"}}
