--- a/views/files/files-overview.hbs
+++ b/views/files/files-overview.hbs
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="/styles/files/files.css"/>
     {{/content}}
     {{#content "critical-styles" mode="append"}}
-        {{{inline "/styles/files/files-overview.critical.css"}}}
+        {{{inlineStyle "/styles/files/files-overview.critical.css"}}}
     {{/content}}
 
 
