--- a/views/homework/overview.hbs
+++ b/views/homework/overview.hbs
@@ -2,7 +2,7 @@
     <link rel="stylesheet" href="/styles/homework/overview.css"/>
 {{/content}}
 {{#content "critical-styles" mode="append"}}
-    {{{inline "/styles/homework/overview.critical.css"}}}
+    {{{inlineStyle "/styles/homework/overview.critical.css"}}}
 {{/content}}
 {{#content "scripts" mode="append"}}
     <script src="/scripts/filter/custom-element-polyfill.js" defer></script>
