--- a/views/news/overview.hbs
+++ b/views/news/overview.hbs
@@ -1,6 +1,6 @@
 {{#extend "news/news"}}
     {{#content "critical-styles" mode="append"}}
-        {{inline "/styles/news/news.critical.css"}}
+        {{inlineStyle "/styles/news/news.critical.css"}}
     {{/content}}
     {{#content "page"}}
         <div class="route-news">
