--- a/views/partner/partner_guests.hbs
+++ b/views/partner/partner_guests.hbs
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="/styles/authentication/home.css"/>
     {{/content}}
     {{#content "critical-styles" mode="append"}}
-        {{{inline "/styles/authentication/home.critical.css"}}}
+        {{{inlineStyle "/styles/authentication/home.critical.css"}}}
         header a[href='/partner']{
             background-color: #f8a41b;
         }
