--- a/views/team/team_guest.hbs
+++ b/views/team/team_guest.hbs
@@ -5,8 +5,8 @@
         <link rel="stylesheet" href="/styles/team/team.css"/>
     {{/content}}
      {{#content "critical-styles" mode="append"}}
-        {{{inline "/styles/authentication/home.critical.css"}}}
-        {{{inline "/styles/team/team.critical.css"}}}
+        {{{inlineStyle "/styles/authentication/home.critical.css"}}}
+        {{{inlineStyle "/styles/team/team.critical.css"}}}
         header a[href='/team']{
             background-color: #f8a41b;
         }
