--- a/views/team/team_loggedin.hbs
+++ b/views/team/team_loggedin.hbs
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="/styles/team/team.css"/>
     {{/content}}
      {{#content "critical-styles" mode="append"}}
-        {{{inline "/styles/team/team.critical.css"}}}
+        {{{inlineStyle "/styles/team/team.critical.css"}}}
     {{/content}}
 
     {{#content "page"}}
