--- a/views/courses/overview.hbs
+++ b/views/courses/overview.hbs
@@ -1,6 +1,6 @@
 {{#extend "lib/loggedin"}}
     {{#content "critical-styles" mode="append"}}
-        {{{inline "/styles/courses/course-overview.critical.css"}}}
+        {{{inlineStyle "/styles/courses/course-overview.critical.css"}}}
     {{/content}}
     {{#content "page"}}
         <section class="section-courses">
