--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="/styles/files/files.css"/>
     {{/content}}
     {{#content "critical-styles" mode="append"}}
-        {{{inline "/styles/files/files.critical.css"}}}
+        {{{inlineStyle "/styles/files/files.critical.css"}}}
     {{/content}}
     {{#content "scripts" mode="append"}}
         <script src="/scripts/dropzone/dropzone.js" type="text/javascript" defer></script>
