renamed files so that travis can detect them as critical

--- a/views/homework/edit.hbs
+++ b/views/homework/edit.hbs
@@ -2,7 +2,7 @@
     <link rel="stylesheet" href="/styles/lib/datetimepicker/jquery.datetimepicker.min.css"/>
 {{/content}}
 {{#content "critical-styles" mode="append"}}
-    {{{inlineStyle "/styles/lib/chosen/bootstrap-chosen.css"}}}
+    {{{inlineStyle "/styles/lib/chosen/bootstrap-chosen.critical.css"}}}
 {{/content}}
 {{#content "scripts" mode="append"}}
     <script src="/vendor/ckeditor/ckeditor.js" defer></script>
