--- a/views/homework/assignment.hbs
+++ b/views/homework/assignment.hbs
@@ -56,7 +56,7 @@
     <style>.section-title h4::before{content:"● {{#if private}}🔒 {{/if}}";color:{{this.color}};</style>
 {{/content}}
 {{#content "critical-styles" mode="append"}}
-    {{{inlineStyle "/styles/homework/tabs.css"}}}
+    {{{inlineStyle "/styles/homework/tabs.critical.css"}}}
 {{/content}}
 
 {{#extend "homework/homework"}}
