--- a/static/styles/team/team.scss
+++ b/static/styles/team/team.scss
@@ -194,8 +194,8 @@
     margin-bottom: 20px;
   }
   .image {
-    width: 300px;
-    height: 300px;
+    width: 100%;
+    height: auto;
     border-radius: 10px;
   }
 }
