--- a/views/team/team.hbs
+++ b/views/team/team.hbs
@@ -34,7 +34,10 @@
                 </div>
             </div>
 
-            <div class="content {{#ifvalue currentteam.style value="small"}} teamsmall col-md-3 {{/ifvalue}} {{#ifvalue currentteam.style value="standard"}} col-md-4 {{/ifvalue}}   col-sm-6 col-xs-12">
+            <div class="content 
+                {{#ifvalue currentteam.style value="small"}} teamsmall col-lg-3 col-md-4 {{/ifvalue}}
+                {{#ifvalue currentteam.style value="standard"}} col-md-4 {{/ifvalue}}
+                col-sm-6 col-xs-12">
                 <div class="person-wrapper">
                     <div class="buttons">
                         <div id="two" class="button{{id}}">
