remove button of feature that isn't working well on sm down devices

--- a/views/lib/header.hbs
+++ b/views/lib/header.hbs
@@ -22,7 +22,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="https://blog.schul-cloud.org/faq" target="_blank">FAQ</a>
                 </li>
-                <li class="nav-item intro-trigger">
+                <li class="nav-item intro-trigger hidden-sm-down">
                     <a class="nav-link" href="#" onclick="startIntro()">Intro</a>
                 </li>
             </ul>
