fix scripts not working at /news

--- a/views/news/edit.hbs
+++ b/views/news/edit.hbs
@@ -2,10 +2,10 @@
     <link rel="stylesheet" href="/styles/lib/datetimepicker/jquery.datetimepicker.min.css"/>
 {{/content}}
 {{#content "scripts" mode="append"}}
-    <script src="/vendor/ckeditor/ckeditor.js" defer />
-    <script src="/scripts/mousetrap/mousetrap.js" defer />
-    <script src="/scripts/jquery/jquery.datetimepicker.full.min.js" type="text/javascript" defer />
-    <script src="/scripts/news.js" defer />
+    <script src="/vendor/ckeditor/ckeditor.js" type="text/javascript" defer ></script>
+    <script src="/scripts/mousetrap/mousetrap.js" type="text/javascript" defer ></script>
+    <script src="/scripts/jquery/jquery.datetimepicker.full.min.js" type="text/javascript" defer ></script>
+    <script src="/scripts/news.js" type="text/javascript" defer></script>
     <script>
         window.addEventListener('DOMContentLoaded', function() {
             CKEDITOR.replaceAll(function (textarea, config) {
