reduce requests and delays

--- a/static/styles/lib/base.critical.scss
+++ b/static/styles/lib/base.critical.scss
@@ -1,5 +1,6 @@
 @import './bootstrap/scss/bootstrap-flex';
 @import "./fontawesome/font-awesome";
+@import "../../fonts/ptsans/ptsans.css";
 
 * {
     -webkit-font-smoothing: antialiased;
