--- a/views/authentication/login.hbs
+++ b/views/authentication/login.hbs
@@ -3,7 +3,10 @@
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/authentication/home.css"/>
     {{/content}}
-
+    {{#content "critical-styles" mode="append"}}
+        {{{inlineStyle "/styles/authentication/home.critical.css"}}}
+    {{/content}}
+    
     {{#content "scripts" mode="append"}}
         <script src="/scripts/login.js" type="text/javascript" defer></script>
         <script type="text/javascript" src="/vendor/mailchimp.js" data-dojo-config="usePlainJson: true, isDebug: false" defer></script>
