add missing style tags

--- a/views/about/about_guest.hbs
+++ b/views/about/about_guest.hbs
@@ -8,9 +8,9 @@
 
     {{#content "critical-styles" mode="append"}}
         {{{inlineStyle "/styles/authentication/home.critical.css"}}}
-        header a[href='/about']{
+        <style>header a[href='/about']{
             background-color: #f8a41b;
-        }
+        }</style>
     {{/content}}
 
     {{#content "scripts" mode="append"}} 
