--- a/views/community/community_guest.hbs
+++ b/views/community/community_guest.hbs
@@ -5,9 +5,9 @@
     {{/content}}
     {{#content "critical-styles" mode="append"}}
         {{{inlineStyle "/styles/authentication/home.critical.css"}}}
-        header a[href='/community']{
+        <style>header a[href='/community']{
             background-color: #f8a41b;
-        }
+        }</style>
     {{/content}}
 
     {{#content "scripts" mode="append"}}
