--- a/views/partner/partner_guests.hbs
+++ b/views/partner/partner_guests.hbs
@@ -6,9 +6,9 @@
     {{/content}}
     {{#content "critical-styles" mode="append"}}
         {{{inlineStyle "/styles/authentication/home.critical.css"}}}
-        header a[href='/partner']{
+        <style>header a[href='/partner']{
             background-color: #f8a41b;
-        }
+        }</style>
     {{/content}}
 
     {{#content "body"}}
