--- a/views/team/team_guest.hbs
+++ b/views/team/team_guest.hbs
@@ -7,9 +7,9 @@
      {{#content "critical-styles" mode="append"}}
         {{{inlineStyle "/styles/authentication/home.critical.css"}}}
         {{{inlineStyle "/styles/team/team.critical.css"}}}
-        header a[href='/team']{
+        <style>header a[href='/team']{
             background-color: #f8a41b;
-        }
+        }</style>
     {{/content}}
 
     {{#content "scripts" mode="append"}}
