added subheader possibility for team page
its possible to add subheader by adding
"subheader_before": "MINT-EC"
to someones card

--- a/views/team/team.hbs
+++ b/views/team/team.hbs
@@ -4,6 +4,7 @@
     <div class="container">
         <div class="row">
             {{#each currentteam.team}}
+            {{#if subheader_before}}<h6>{{subheader_before}}</h6>{{/if}}
             <div id="modal-container-{{id}}">
                 <div class="modal-background {{#if ../../loggedin}}modal-padding{{/if}}">
                     <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
