--- a/static/styles/team/team.scss
+++ b/static/styles/team/team.scss
@@ -193,6 +193,14 @@
     margin-top: 20px;
     margin-bottom: 20px;
   }
+  h6 {
+    color: $primaryColor;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 100%;
+    display: block;
+    font-size: 1.1rem;
+  }
   .image {
     width: 100%;
     height: auto;
