--- a/views/lib/piwik.hbs
+++ b/views/lib/piwik.hbs
@@ -9,5 +9,16 @@
 
     _paq.push(['trackPageView']);
     _paq.push(['enableLinkTracking']);
+
+    window.addEventListener("load", _ => {
+        var u = "//open.hpi.de/piwik/";
+        _paq.push(['setTrackerUrl', u + 'piwik.php']);
+        _paq.push(['setSiteId', '8']);
+        var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
+        g.type = 'text/javascript';
+        g.async = true;
+        g.defer = true;
+        g.src = u + 'piwik.js';
+        s.parentNode.insertBefore(g, s);
+    });
 </script>
-<script src="//open.hpi.de/piwik/piwik.js" type="text/javascript" async></script>
