--- a/views/lib/default.hbs
+++ b/views/lib/default.hbs
@@ -25,10 +25,12 @@
     <link rel="preload" href="/fonts/ptsans/ptsans-regular.woff" as="font" type="font/woff" crossorigin />
     <link rel="preload" href="/fonts/ptsans/ptsans-bold.woff" as="font" type="font/woff" crossorigin />
     <link rel="preload" href="/fonts/ptsans/ptsans-italic.woff" as="font" type="font/woff" crossorigin />
-    <link rel="preload" href="/fonts/fontawesome/fontawesome-webfont.woff" as="font" type="font/woff" crossorigin />
+    <link rel="preload" href="/fonts/fontawesome/fontawesome-webfont.woff2" as="font" type="font/woff2" crossorigin />
     {{#block "critical-styles"}}
         <link rel="stylesheet" href="/styles/lib/base.critical.css" />
         <link rel="mask-icon" href="/images/logo/safari-pinned-tab.svg" color="#b10438" />
+        <link rel="stylesheet" href="/fonts/ptsans/ptsans.css" />
+        <link rel="stylesheet" href="/fonts/fontawesome/fontawesome.css" />
     {{/block}}
     <noscript class="lazyload">
         {{#block "styles"}}
@@ -38,7 +40,7 @@
 
     {{#block "scripts"}}
         <script>
-        window.addEventListener('DOMContentLoaded', _ => {
+        window.addEventListener('load', _ => {
             const lazyloads = document.querySelectorAll('noscript.lazyload');
             // This container is the HTML parser
             const container = document.createElement('div');
