load sidebar logo async

--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -51,7 +51,9 @@
                 <ul class="sidebar-list">
                     <li>
                         <a class="sc-branding" href="/">
-                            <div class="cloud-logo"></div>
+                            <noscript class="lazyload">
+                                <div class="cloud-logo"></div>
+                            </noscript>
                             <div class="sc-title"><span>{{themeTitle}}</span></div>
                         </a>
                     </li>
