Add lrs-activity log for student on dashboard

--- a/views/courses/components/lrs-activitylog.hbs
+++ b/views/courses/components/lrs-activitylog.hbs
@@ -1,5 +1,6 @@
 <div class="list-group list-group-flush">
     <h5>Aktivitätenlog</h5>
+    <!-- TODO: Limit number of statements -->
     {{#each statements}}
         <div class="list-group-item">
             {{#if actor.account.displayName}}
