add additional pattern restrictions

--- a/views/topic/edit-topic.hbs
+++ b/views/topic/edit-topic.hbs
@@ -35,7 +35,7 @@
                     <label>Inhalte</label>
 
                     <!-- React Magic -->
-                    <div id="content-blocks" data-value="{{lesson.contents}}" data-etherpadbaseurl="{{etherpadBaseUrl}}" data-iscoursegroup="{{courseGroupId}}" data-topicid="{{topicId}}"></div>
+                    <div id="content-blocks" data-value="{{lesson.contents}}" data-etherpadbaseurl="{{etherpadBaseUrl}}" data-iscoursegroup="{{courseGroupId}}"></div>
                 </div>
 
                 <div class="modal-footer">
