--- a/views/lib/components/table.hbs
+++ b/views/lib/components/table.hbs
@@ -32,12 +32,12 @@
                                     {{#if this.method}}
                                         <form action="{{this.link}}" method="post" class="inline">
                                             <input type="hidden" name="_method" value="{{this.method}}"/>
-                                            <button type="submit" class="btn btn-secondary btn-sm {{this.class}}" title="{{this.description}}">
+                                            <button type="submit" class="btn btn-secondary btn-sm no-inline-styling {{this.class}}" title="{{this.title}}">
                                                 <i class="fa fa-{{this.icon}}"></i> {{this.label}}
                                             </button>
                                         </form>
                                     {{else}}
-                                        <a class="btn btn-secondary btn-sm {{this.class}}" href="{{this.link}}" title="{{this.description}}">
+                                        <a class="btn btn-secondary btn-sm {{this.class}}" href="{{this.link}}" title="{{this.title}}">
                                             <i class="fa fa-{{this.icon}}"></i> {{this.label}}
                                         </a>
                                     {{/if}}
