--- a/views/files/files-grid.hbs
+++ b/views/files/files-grid.hbs
@@ -22,7 +22,8 @@
                                 <small class="file-location">{{#if this.context}}gefunden in: {{this.context}}{{/if}}</small><br>
                                 <a href="/files/file?download=1&file={{this.file}}"
                                    target="_blank"
-                                   data-method="download">
+                                   data-method="download"
+                                   title="Datei herunterladen">
                                     <i class="fa fa-cloud-download"></i>
                                 </a>
 
@@ -31,6 +32,7 @@
                                 <a href="/files/file/"
                                    target="_blank"
                                    data-method="delete"
+                                   title="Datei löschen"
                                    data-file-key="{{../this.key}}"
                                    data-file-name="{{../this.name}}"
                                     <i class="fa fa-trash-o"></i>
@@ -39,6 +41,7 @@
 
                                 <a href="#"
                                    class="btn-file-share"
+                                   title="Datei teilen"
                                    data-file-id="{{../this._id}}">
                                     <i class="fa fa-share-alt"></i>
                                 </a>
@@ -46,6 +49,7 @@
                                 {{#userHasPermission "FILE_MOVE"}}
                                 <a href="#"
                                    class="btn-file-move"
+                                   title="Datei verschieben"
                                    data-file-path="{{../path}}"
                                    data-file-id="{{../_id}}"
                                    data-file-name="{{../name}}">
