--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -49,6 +49,7 @@
 								<a href="/files/directory/"
 								   target="_blank"
 								   data-method="delete"
+                                   title="Ordner löschen"
 								   data-file-name="{{../this.name}}"
 								   data-file-key="{{../this.path}}">
 									<i class="fa fa-trash-o pull-right"></i>
