--- a/views/community/community_guest.hbs
+++ b/views/community/community_guest.hbs
@@ -2,6 +2,14 @@
 
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/authentication/home.css"/>
+        <style>
+            header a[href='/community']{
+                background-color: #f8a41b;
+            }
+            .intro-trigger{
+                display: none
+            }
+        </style>
     {{/content}}
 
     {{#content "scripts" mode="append"}}
