--- a/views/partner/partner_guests.hbs
+++ b/views/partner/partner_guests.hbs
@@ -13,6 +13,9 @@
             header a[href='/partner']{
                 background-color: #f8a41b;
             }
+            .intro-trigger{
+                display: none
+            }
         </style>
     {{/content}}
 
