retry travis test
travis test failed because of certificate error, issue a change to restart tests

--- a/views/imprint/imprint.hbs
+++ b/views/imprint/imprint.hbs
@@ -106,7 +106,6 @@
     <p>Hasso-Plattner-Institut<br />
         Prof.-Dr.-Helmert-Str. 2-3<br />
         14482 Potsdam<br />
-        Email:
-        <a href="mailto:schul-cloud@hpi.de">schul-cloud@hpi.de</a>
+        Email: <a href="mailto:schul-cloud@hpi.de">schul-cloud@hpi.de</a>
     </p>
 </div>
