implement pull request suggestions (opt-in)

--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -63,6 +63,10 @@ label,
     user-select: none;
 }
 
+.hidden{
+	display: none;
+}
+
 .btn-loading {
 	font-size: 0px !important;
 	transition: width 0.3s;
