inverted class logic

--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -63,8 +63,15 @@ label,
     user-select: none;
 }
 
+.intro-trigger {
+	display: none;
+}
+
 .hidden{
 	display: none;
+}
+.show{
+	display: initial;
 }
 
 .btn-loading {
