remove intro trigger from all public pages where it no intro is implemented (#682)
* remove intro trigger from all public pages where it no intro is implemented

* implement pull request suggestions (opt-in)

* inverted class logic

--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -63,6 +63,17 @@ label,
     user-select: none;
 }
 
+.intro-trigger {
+	display: none;
+}
+
+.hidden{
+	display: none;
+}
+.show{
+	display: initial;
+}
+
 .btn-loading {
 	font-size: 0px !important;
 	transition: width 0.3s;
