--- a/views/about/about_guest.hbs
+++ b/views/about/about_guest.hbs
@@ -4,6 +4,11 @@
         <link rel="stylesheet" href="/styles/authentication/home.css"/>
         <link rel="stylesheet" href="/styles/partner/partner.css"/>
         <link rel="stylesheet" href="/styles/about/about.css"/>
+        <style>
+            header a[href='/about']{
+                background-color: #f8a41b;
+            }
+        </style>
     {{/content}}
 
     {{#content "scripts" mode="append"}} 
