--- a/views/team/team_guest.hbs
+++ b/views/team/team_guest.hbs
@@ -3,6 +3,11 @@
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/authentication/home.css"/>
         <link rel="stylesheet" href="/styles/team/team.css"/>
+        <style>
+            header a[href='/team']{
+                background-color: #f8a41b;
+            }
+        </style>
     {{/content}}
 
     {{#content "scripts" mode="append"}}
