--- a/views/classes/overview.hbs
+++ b/views/classes/overview.hbs
@@ -54,7 +54,7 @@
                 </div>
 
                 {{#userHasPermission "COURSE_EDIT"}}
-                    <div class="row padding-top">
+                    <div class="padding-top">
                         <button class="btn btn-add btn-primary">Klasse anlegen</button>
                     </div>
                 {{/userHasPermission}}
