--- a/views/files/files-grid.hbs
+++ b/views/files/files-grid.hbs
@@ -12,7 +12,7 @@
                             <div class="card-title">
                                 <div class="col-sm-3 no-padding">
                                     <noscript class="lazyload">
-                                        <div class="file-preview" style="background-image: url({{this.thumbnail}}); -webkit-background-size: 50px; background-size: 50px;"></div>
+                                        <div class="file-preview" style="background-image: url({{this.thumbnail}});"></div>
                                     </noscript>
                                 </div>
                                 <a class="title">
