--- a/static/styles/administration/school.critical.scss
+++ b/static/styles/administration/school.critical.scss
@@ -1,1 +1,9 @@
-@import "../lib/chosen/bootstrap-chosen";
+@import '../lib/colors';
+.teacher-option {
+  h4 {
+    padding-top: 20px;
+    color: $primaryColor
+  }
+  text-align: center;
+  cursor: pointer;
+}
