--- a/static/styles/lib/loggedin.critical.scss
+++ b/static/styles/lib/loggedin.critical.scss
@@ -3,8 +3,35 @@
 @import "./components/layout";
 @import "./components/sidebar";
 @import "./components/topbar";
+@import "./components/footer";
+
+.content-wrapper {
+    .school-data {
+        padding-top: 11px;
+    }
+    .section-default {
+        width: 100%;
+        float: left;
+        padding: 30px 0px 50px;
+        line-height: 1.75rem;
+
+        & + .section-default {
+            border-top: 1px solid #ddd;
+        }
+
+        h5 {
+            color: $primaryColor;
+            margin: 0px 0px 30px 0px;
+        }
+
+    }
+}
 
 .section-title{
+    width: 100%;
+    padding: 10px 0px 20px;
+    line-height: 1.75rem;
+
     .search-wrapper {
         float: right;
 
@@ -53,6 +80,21 @@
             }
         }
     }
+
+    h4 {
+        color: $primaryColor;
+        float: left;
+        margin-bottom: 0px;
+        margin-right: 20px;
+        font-weight: bold;
+    }
+
+    .location-info {
+        float: left;
+        a {
+            color: $accentColor;
+        }
+    }
 }
 .pagination-wrapper {
     text-align: center;
@@ -61,5 +103,24 @@
 @media (max-width: 1024px) {
     .intro-trigger {
         display: none;
+    }
+}
+
+.ckcontent {
+    margin: 10px 0;
+    color: #373a3c;
+    text-decoration:none;
+    &:hover{text-decoration:none;}
+    h1 {font-size: 1.3rem;font-weight:bold}
+    h2 {font-size: 1.2rem;font-weight:bold;font-style:italic}
+    h3 {font-size: 1.1rem;font-style:italic;text-decoration:underline}
+    p  {font-size: 1rem;margin-bottom:.25rem;}
+    img, video{max-width: 100%;}
+    table{display: block; max-width:100%; overflow: auto;}
+    blockquote{
+      color: grey;
+      margin-left: 1rem;
+      border-left: 2px solid grey;
+      padding-left: 5px;
     }
 }
