first pdf embed tests
testing <object>, <embed> and google docs iframe viewer. object and embed working flawlessly, google docs viewer has the advantage of a browser-independent look&feel but fails sometime on page load/refresh - dont know why.

--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -24,6 +24,20 @@
         Excellence-Schulnetzwerks MINT-EC ausgeweitet wird. Seit dem wächst auch unser <a
                 href="https://schul-cloud.org/team">Team</a> stetig!</p>
     <br/>
+    <h5>PDF Embed Tests</h5>
+    Simple Object:<br/>
+    <object data="/vendor/GEIBroschuere_web.pdf" type="application/pdf" style="width:100%; height:500px;" >
+        <p>Alternative text</p>
+    </object>
+    <br/>
+    Simple Embed:<br/>
+    <embed src="/vendor/GEIBroschuere_web.pdf" style="width:100%; height:500px;" >
+    <br/>
+    GDocs iframe (vorzeigeweise mit einer anderen PDF):<br/>
+    <iframe src="http://docs.google.com/gview?url=https://hpi.de/fileadmin/user_upload/hpi/dokumente/publikationen/projekte/schul-cloud_beschreibung_website.pdf&embedded=true" style="width:100%; height:500px;" frameborder="0"></iframe>
+    <br/>
+    PDF.js:<br/>
+    too much, needed?
     <div class="section-partner">
         <h4>Pilotschulen</h4>
         <h5>Best Practice Schulen</h5>
