extract critical css from /content

--- a/views/content/item.hbs
+++ b/views/content/item.hbs
@@ -1,6 +1,8 @@
 <div class="card">
 
-    <img class="card-img-top" src="{{{ thumbnail }}}" alt="Thumbnail">
+    <noscript class="lazyload">
+        <img class="card-img-top" src="{{{ thumbnail }}}" alt="Thumbnail">
+    </noscript>
     <div class="card-block">
 
         {{#userIsAllowedToViewContent nonOer}}
