--- a/views/content/search-results.hbs
+++ b/views/content/search-results.hbs
@@ -1,7 +1,7 @@
 {{#extend "lib/loggedin" hideSearch="true"}}
 
-    {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/content/content.css"/>
+    {{#content "critical-styles" mode="append"}}
+        <link rel="stylesheet" href="/styles/content/content.critical.css"/>
     {{/content}}
 
     {{#content "page"}}
