add smooth touch scrolling on ios
https://developer.mozilla.org/de/docs/Web/CSS/-webkit-overflow-scrolling

--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -256,6 +256,7 @@ header {
     width: calc(100vw - 240px);
     height: 100vh;
     overflow: auto;
+    -webkit-overflow-scrolling: touch;
     padding: 0;
 
     @include media-breakpoint-down(md) {
