--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -229,7 +229,7 @@
                                         <a class="mobile-search-toggle">
                                             <i class="fa fa-search"></i>
                                         </a>
-                                        <div class="input-group input-group-sm">
+                                        <div class="search-form input-group input-group-sm">
                                             <input type="text" class="form-control search-field {{searchClass}}" placeholder="{{#if searchLabel}}{{searchLabel}}{{else}}Suche nach...{{/if}}" name="q" />
                                             <span class="input-group-btn">
                                                 <button type="submit" class="btn btn-secondary">
