--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -24,20 +24,6 @@
         Excellence-Schulnetzwerks MINT-EC ausgeweitet wird. Seit dem wächst auch unser <a
                 href="https://schul-cloud.org/team">Team</a> stetig!</p>
     <br/>
-    <h5>PDF Embed Tests</h5>
-    Simple Object:<br/>
-    <object data="/vendor/GEIBroschuere_web.pdf" type="application/pdf" style="width:100%; height:500px;" >
-        <p>Alternative text</p>
-    </object>
-    <br/>
-    Simple Embed:<br/>
-    <embed src="/vendor/GEIBroschuere_web.pdf" style="width:100%; height:500px;" >
-    <br/>
-    GDocs iframe (vorzeigeweise mit einer anderen PDF):<br/>
-    <iframe src="http://docs.google.com/gview?url=https://hpi.de/fileadmin/user_upload/hpi/dokumente/publikationen/projekte/schul-cloud_beschreibung_website.pdf&embedded=true" style="width:100%; height:500px;" frameborder="0"></iframe>
-    <br/>
-    PDF.js:<br/>
-    too much, needed?
     <div class="section-partner">
         <h4>Pilotschulen</h4>
         <h5>Best Practice Schulen</h5>
@@ -107,8 +93,135 @@
        Nutzungskonzept für die pädagogisch-didaktisch sinnvolle Anwendung der Schul-Cloud. Außerdem hat das HPI zusammen mit der <a href="https://www.presse.uni-augsburg.de/unipressedienst/2018/jan-maerz/2018_003/" target="_blank">Universität Augsburg</a> 
        einen MOOC zu dem Thema <a href="https://mooc.house/courses/lernen40-2018" target="_blank">Lernen 4.0 - Möglichkeiten und Grenzen einer Digitalisierung im Bildungsbereich</a> durchgeführt.</p>
     <br/>
-    <h4>Veröffentlichungen</h4>
+    <script>
+        function teste(e) {
+            //e.preventDefault();
+            var elem = e;
+            console.log(e);
+            console.log(elem);
+            if($(elem).attr("data-pdf")&&$(elem).attr("data-pdf").endsWith(".pdf")) {
+                $(elem).parent(".embed-pdf-row").next(".viewer").show();
+            }
+            alert("abc");
+        }
+    </script>
+    <div class="container embed-pdf">
+        <div class="row embed-pdf-row">
+            <div class="single-pdf col-xs-6 col-md-4">
+                <a href="#" onclick='teste(this);'>
+                    <div class="single-pdf-wrapper">
+                        <b class="single-pdf-title">Die Schul-Cloud im Unterricht - Fachübergreifende Unterrichtsszenarien
+                            und Methoden</b>
+                        <br/>
+                        <span>Ergebnisse der bildungswissenschaftlichen Begleitforschung des Georg-Eckert-Instituts</span>
+                        <br/>
+                        <div class="single-pdf-thumbnail">
+                            <img src="/images/embed-pdf-fachuebergreifende-unterrichtsszenarien-begleitforschung-Georg-Eckert-Institut.jpg" />
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="single-pdf col-xs-6 col-md-4">
+                <a href="#">
+                    <div class="single-pdf-wrapper">
+                        <b class="single-pdf-title">Die Schul-Cloud im Unterricht - Fachübergreifende Unterrichtsszenarien
+                            und Methoden</b>
+                        <br/>
+                        <span>Ergebnisse der bildungswissenschaftlichen Begleitforschung des Georg-Eckert-Instituts</span>
+                        <br/>
+                        <div class="single-pdf-thumbnail">
+                            <img src="/images/embed-pdf-fachuebergreifende-unterrichtsszenarien-begleitforschung-Georg-Eckert-Institut.jpg" />
+                        </div>
+                        <!--<object data="/vendor/GEI-Broschuere-web.pdf" type="application/pdf" style="width:100%; height:700px;" >
+                            <iframe src="/vendor/GEI-Broschuere-web.pdf" style="width:100%; height:700px; border: none;">
+                            <p>Ihr Browser kann das eingebettete PDF nicht anzeigen. Sie können es sich hier ansehen: <a href="/vendor/GEI-Broschuere-web.pdf" target="_blank" rel="noopener">GEI-Broschuere-web.pdf</a>.</p>
+                            </iframe>
+                        </object>-->
+                    </div>
+                </a>
+            </div>
+            <div class="single-pdf col-xs-6 col-md-4">
+                <a href="#">
+                    <div class="single-pdf-wrapper" data-pdf="/vendor/GEI-Broschuere-web.pdf">
+                        <b class="single-pdf-title">Die Schul-Cloud im Unterricht - Fachübergreifende Unterrichtsszenarien
+                            und Methoden</b>
+                        <br/>
+                        <span>Ergebnisse der bildungswissenschaftlichen Begleitforschung des Georg-Eckert-Instituts</span>
+                        <br/>
+                        <div class="single-pdf-thumbnail">
+                            <img src="/images/embed-pdf-fachuebergreifende-unterrichtsszenarien-begleitforschung-Georg-Eckert-Institut.jpg" />
+                        </div>
+                        <!--<object data="/vendor/GEI-Broschuere-web.pdf" type="application/pdf" style="width:100%; height:700px;" >
+                            <iframe src="/vendor/GEI-Broschuere-web.pdf" style="width:100%; height:700px; border: none;">
+                            <p>Ihr Browser kann das eingebettete PDF nicht anzeigen. Sie können es sich hier ansehen: <a href="/vendor/GEI-Broschuere-web.pdf" target="_blank" rel="noopener">GEI-Broschuere-web.pdf</a>.</p>
+                            </iframe>
+                        </object>-->
+                    </div>
+                </a>
+            </div>
+        </div>
+        <object class="viewer" data="/vendor/GEI-Broschuere-web.pdf" type="application/pdf" style="display: none; width:100%; height:700px;" >
+            <iframe src="/vendor/GEI-Broschuere-web.pdf" style="width:100%; height:700px; border: none;">
+            <p>Ihr Browser kann das eingebettete PDF nicht anzeigen. Sie können es sich hier ansehen: <a href="/vendor/GEI-Broschuere-web.pdf" target="_blank" rel="noopener">GEI-Broschuere-web.pdf</a>.</p>
+            </iframe>
+        </object>
+        <div class="row embed-pdf-row">
+            <div class="single-pdf col-xs-6 col-md-4">
+                <a href="#">
+                    <div class="single-pdf-wrapper">
+                        <b class="single-pdf-title">Die Schul-Cloud im Unterricht - Fachübergreifende Unterrichtsszenarien
+                            und Methoden</b>
+                        <br/>
+                        <span>Ergebnisse der bildungswissenschaftlichen Begleitforschung des Georg-Eckert-Instituts</span>
+                        <br/>
+                        <div class="single-pdf-thumbnail">
+                            <img src="/images/embed-pdf-fachuebergreifende-unterrichtsszenarien-begleitforschung-Georg-Eckert-Institut.jpg" />
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="single-pdf col-xs-6 col-md-4">
+                <a href="#">
+                    <div class="single-pdf-wrapper">
+                        <b class="single-pdf-title">Die Schul-Cloud im Unterricht - Fachübergreifende Unterrichtsszenarien
+                            und Methoden</b>
+                        <br/>
+                        <span>Ergebnisse der bildungswissenschaftlichen Begleitforschung des Georg-Eckert-Instituts</span>
+                        <br/>
+                        <div class="single-pdf-thumbnail">
+                            <img src="/images/embed-pdf-fachuebergreifende-unterrichtsszenarien-begleitforschung-Georg-Eckert-Institut.jpg" />
+                        </div>
+                        <!--<object data="/vendor/GEI-Broschuere-web.pdf" type="application/pdf" style="width:100%; height:700px;" >
+                            <iframe src="/vendor/GEI-Broschuere-web.pdf" style="width:100%; height:700px; border: none;">
+                            <p>Ihr Browser kann das eingebettete PDF nicht anzeigen. Sie können es sich hier ansehen: <a href="/vendor/GEI-Broschuere-web.pdf" target="_blank" rel="noopener">GEI-Broschuere-web.pdf</a>.</p>
+                            </iframe>
+                        </object>-->
+                    </div>
+                </a>
+            </div>
+            <div class="single-pdf col-xs-6 col-md-4">
+                <a href="#">
+                    <div class="single-pdf-wrapper" data-pdf="/vendor/GEI-Broschuere-web.pdf">
+                        <b class="single-pdf-title">Die Schul-Cloud im Unterricht - Fachübergreifende Unterrichtsszenarien
+                            und Methoden</b>
+                        <br/>
+                        <span>Ergebnisse der bildungswissenschaftlichen Begleitforschung des Georg-Eckert-Instituts</span>
+                        <br/>
+                        <div class="single-pdf-thumbnail">
+                            <img src="/images/embed-pdf-fachuebergreifende-unterrichtsszenarien-begleitforschung-Georg-Eckert-Institut.jpg" />
+                        </div>
+                        <!--<object data="/vendor/GEI-Broschuere-web.pdf" type="application/pdf" style="width:100%; height:700px;" >
+                            <iframe src="/vendor/GEI-Broschuere-web.pdf" style="width:100%; height:700px; border: none;">
+                            <p>Ihr Browser kann das eingebettete PDF nicht anzeigen. Sie können es sich hier ansehen: <a href="/vendor/GEI-Broschuere-web.pdf" target="_blank" rel="noopener">GEI-Broschuere-web.pdf</a>.</p>
+                            </iframe>
+                        </object>-->
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
     <br/>
+    <h4>Veröffentlichungen</h4>
     <p><b>2017</b></p>
     <ul>
         <li>Meinel, C., Renz, J., Grella, C., Karn, N. & Hagedorn, C. (2017). <a
